@@ -13,6 +13,7 @@ Version 2.1.1
 
 - Fixed Jython compatibility (#1205)
 - Fixed HTML formatter output with leading empty lines (#1111)
+- Added a mapping table for LaTeX encodings and added utf8 (#1152)
 - Fixed image formatter font searching on Macs (#1188)
 - Fixed deepcopy-ing of Token instances (#1168)
 - Fixed Julia string interpolation (#1170)
